fix: center profile avatar on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,10 @@ p {
     padding: 6rem 0;
   }
   
+  .profile {
+    align-items: center;
+  }
+
   .right-part {
     align-items: center;
   }
